Add Apps Development docs

--- a/index.html
+++ b/index.html
@@ -3,4 +3,9 @@ title: Integromat Developers
 layout: default
 ---
 
-<p>Coming soon.</p>
+<div class="list-group list-group-squares">
+	<a class="list-group-item" href="/apps/">
+		<i class="fa fa-cogs list-group-icon"></i>
+		<h3>Apps Development</h3>
+	</a>
+</div>
