Add redirect to the new Apps docs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <div class="list-group list-group-squares">
-	<a class="list-group-item" href="/apps/">
+	<a class="list-group-item" href="https://docs.integromat.com/apps/">
 		<i class="fa fa-cogs list-group-icon"></i>
 		<h3>Apps Development</h3>
 	</a>
